Bug 1807495 - part 1: Make `Document` notify `HTMLEditor` and `IMEStateManager` of pseudo focus change when editing state of focused editing host or document is changed r=smaug,m_kato
`IMEStateManager` basically runs at focus change.  However, when `designMode`
is set to `"off"` or focused editing host becomes non-editable (removing
`contenteditable` attribute or `contenteditable` attribute is set to `false`),
IME may be disabled without a focus change.  Therefore, `Document` needs to
notify `IMEStateManager` of the timing.

Additionally, `nsFocusManager` does not change focus when focused element
becomes not focusable (bug 1807597).  Therefore, `Document` needs to kick
`focus` or `blur` event handler of `HTMLEditor` when active editing host
becomes not editable.

However, if an ancestor of focused element becomes editable, I think that
`HTMLEditor` does not work well without focus move because it computes
editing host with current editing state in a lot of places, but `Selection`
and `nsFocusManager::GetFocusedElement` keeps working with previous focused
element which is now a editable child of editing host.  Therefore, this patch
marks them as `todo` in the new tests.

Differential Revision: https://phabricator.services.mozilla.com/D171196

UltraBlame original commit: b6bd61402683fafd8a42fd2e0bfc4b91e7b590ab

--- a/dom/events/test/test_bug1128787-1.html
+++ b/dom/events/test/test_bug1128787-1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1128787
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for Bug 1128787</title>
@@ -26,8 +26,7 @@
       SimpleTest.executeSoon(function () {
         document.designMode = "off";
 
-        // XXX Should be fixed.
-        todo_is(utils.IMEStatus, utils.IME_STATUS_DISABLED, "IME should be disabled");
+        is(utils.IMEStatus, utils.IME_STATUS_DISABLED, "IME should be disabled");
 
         SimpleTest.finish();
       });
