--- a/dom/events/test/test_bug1128787-3.html
+++ b/dom/events/test/test_bug1128787-3.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1128787
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for Bug 1128787</title>
@@ -29,7 +29,7 @@
       is(document.designMode, "off",
          "designMode should become \"off\" even if it's reset by the blur event handler caused by enabling designMode");
 
-      todo_is(utils.IMEStatus, utils.IME_STATUS_DISABLED, "IME should be disabled");
+      is(utils.IMEStatus, utils.IME_STATUS_DISABLED, "IME should be disabled");
       SimpleTest.finish();
     }, {once: true});
     document.designMode = "on";
