--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -4,17 +4,22 @@
 <meta charset="utf-8">
 <script src="file_ime_state_test_helper.js"></script>
 <script src="file_test_ime_state_on_focus_move.js"></script>
+<script src="file_test_ime_state_on_input_type_change.js"></script>
 <script>
 "use strict";
 
 /* import-globals-from ../file_ime_state_test_helper.js */
 /* import-globals-from ../file_test_ime_state_on_focus_move.js */
+/* import-globals-from ../file_test_ime_state_on_input_type_change.js */
 
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
 }
 function createIMEStateOnFocusMoveTester(aDescription, aIndex, aWindow = window) {
   return new IMEStateOnFocusMoveTester(aDescription, aIndex, aWindow);
+}
+function createIMEStateOnInputTypeChangeTester(aSrcIndex) {
+  return new IMEStateOnInputTypeChangeTester(aSrcIndex);
 }
 </script>
 </head>
