--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -19,6 +19,9 @@
 function createIMEStateInContentEditableOnReadonlyChangeTester() {
   return new IMEStateInContentEditableOnReadonlyChangeTester();
 }
+function createIMEStateOfTextControlInContentEditableOnReadonlyChangeTester() {
+  return new IMEStateOfTextControlInContentEditableOnReadonlyChangeTester();
+}
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
 }
