--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -22,6 +22,9 @@ function createIMEStateInContentEditableOnReadonlyChangeTester() {
 function createIMEStateOfTextControlInContentEditableOnReadonlyChangeTester() {
   return new IMEStateOfTextControlInContentEditableOnReadonlyChangeTester();
 }
+function createIMEStateOutsideContentEditableOnReadonlyChangeTester() {
+  return new IMEStateOutsideContentEditableOnReadonlyChangeTester();
+}
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
 }
