--- a/widget/tests/test_ime_state_in_contenteditable_on_readonly_change_in_parent.html
+++ b/widget/tests/test_ime_state_in_contenteditable_on_readonly_change_in_parent.html
@@ -49,6 +49,21 @@ SimpleTest.waitForFocus(async () => {
     editingHost.setAttribute("contenteditable", "");
   })();
 
+  await (async function test_ime_state_outside_contenteditable_on_readonly_change() {
+    const tester = new IMEStateOutsideContentEditableOnReadonlyChangeTester();
+    for (let index = 0;
+         index < IMEStateOutsideContentEditableOnReadonlyChangeTester.numberOfFocusTargets;
+         index++) {
+      tester.checkResultOfPreparation(await tester.prepareToRun(index, editingHost), window, tipWrapper);
+      tester.checkResultOfMakingParentEditingHost(await tester.runToMakeParentEditingHost());
+      tester.checkResultOfMakingHTMLEditorReadonly(await tester.runToMakeHTMLEditorReadonly());
+      tester.checkResultOfMakingHTMLEditorEditable(await tester.runToMakeHTMLEditorEditable());
+      tester.checkResultOfMakingParentNonEditable(await tester.runToMakeParentNonEditingHost());
+      tester.clear();
+    }
+    editingHost.setAttribute("contenteditable", "");
+  })();
+
   SimpleTest.finish();
 });
 </script>
