--- a/widget/tests/test_ime_state_others_in_parent.html
+++ b/widget/tests/test_ime_state_others_in_parent.html
@@ -1,33 +1,18 @@
-<html style="ime-mode: disabled;">
+<html>
 <head>
-  <title>Test for IME state controlling</title>
+  <title>Test for IME state controlling in some special cases</title>
   <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
   <script src="chrome://mochikit/content/tests/SimpleTest/EventUtils.js"></script>
   <script src="file_ime_state_test_helper.js"></script>
   <link rel="stylesheet" type="text/css"
           href="chrome://mochikit/content/tests/SimpleTest/test.css" />
 </head>
-<body onload="setTimeout(runTests, 0);" style="ime-mode: disabled;">
-<div id="display" style="ime-mode: disabled;">
-  <input type="text" id="text"/><br/>
-</div>
-<div id="content" style="display: none">
-  
-</div>
-<pre id="test">
-</pre>
-
-<script class="testbody" type="application/javascript">
-
+<body>
+<div id="display"></div>
+<div id="content" style="display: none"></div>
+<pre id="test"></pre>
+<script>
 SimpleTest.waitForExplicitFinish();
-
-function hitEventLoop(aFunc, aTimes) {
-  if (--aTimes) {
-    setTimeout(hitEventLoop, 0, aFunc, aTimes);
-  } else {
-    setTimeout(aFunc, 20);
-  }
-}
 
 var gUtils = window.windowUtils;
 var gFM = Services.focus;
@@ -147,108 +132,7 @@ function runTestPasswordFieldOnDialog() {
   }
 }
 
-// Bug 580388 and bug 808287
-async function runEditorReframeTests() {
-  if (document.activeElement) {
-    document.activeElement.blur();
-  }
-
-  var IMEFocus = 0;
-  var IMEBlur = 0;
-  var IMEHasFocus = false;
-  var TIPCallback = function(aTIP, aNotification) {
-    switch (aNotification.type) {
-      case "request-to-commit":
-        aTIP.commitComposition();
-        break;
-      case "request-to-cancel":
-        aTIP.cancelComposition();
-        break;
-      case "notify-focus":
-        IMEFocus++;
-        IMEHasFocus = true;
-        break;
-      case "notify-blur":
-        IMEBlur++;
-        IMEHasFocus = false;
-        break;
-    }
-    return true;
-  };
-
-  var TIP = Cc["@mozilla.org/text-input-processor;1"]
-              .createInstance(Ci.nsITextInputProcessor);
-  if (!TIP.beginInputTransactionForTests(window, TIPCallback)) {
-    ok(false, "runEditorReframeTests(): failed to begin input transaction");
-    return;
-  }
-
-  var input = document.getElementById("text");
-  input.focus();
-
-  is(IMEFocus, 1, "runEditorReframeTests(): IME should receive a focus notification by a call of <input>.focus()");
-  is(IMEBlur, 0, "runEditorReframeTests(): IME shouldn't receive a blur notification by a call of <input>.focus()");
-  ok(IMEHasFocus, "runEditorReframeTests(): IME should have focus because <input>.focus() is called");
-
-  IMEFocus = IMEBlur = 0;
-
-  input.style.overflow = "visible";
-
-  var onInput = function(aEvent) {
-    aEvent.target.style.overflow = "hidden";
-  };
-  input.addEventListener("input", onInput, true);
-
-  var AKey = new KeyboardEvent("", { key: "a", code: "KeyA", keyCode: KeyboardEvent.DOM_VK_A });
-  TIP.keydown(AKey);
-  TIP.keyup(AKey);
-
-  await new Promise(r => hitEventLoop(r, 20));
-
-  is(IMEFocus, 0, "runEditorReframeTests(): IME shouldn't receive a focus notification during reframing");
-  is(IMEBlur, 0, "runEditorReframeTests(): IME shouldn't receive a blur notification during reframing");
-  ok(IMEHasFocus, "runEditorReframeTests(): IME must have focus even after reframing");
-
-  var onFocus = function(aEvent) {
-    // Perform a style change and query during focus to trigger reframing
-    input.style.overflow = "visible";
-    synthesizeQuerySelectedText();
-  };
-  input.addEventListener("focus", onFocus);
-  IMEFocus = IMEBlur = 0;
-
-  input.blur();
-  input.focus();
-  await new Promise(
-    resolve => requestAnimationFrame(
-      () => requestAnimationFrame(resolve)
-    )
-  ); // wait for notify-focus
-  TIP.keydown(AKey);
-  TIP.keyup(AKey);
-
-  await new Promise(r => hitEventLoop(r, 20));
-
-  is(IMEFocus, 1, "runEditorReframeTests(): IME should receive a focus notification at focus but shouldn't receive it during reframing");
-  is(IMEBlur, 1, "runEditorReframeTests(): IME should receive a blur notification at blur but shouldn't receive it during reframing");
-  ok(IMEHasFocus, "runEditorReframeTests(): IME sould have focus after reframing during focus");
-
-  input.removeEventListener("input", onInput, true);
-  input.removeEventListener("focus", onFocus);
-
-  input.style.overflow = "visible";
-  input.value = "";
-
-  TIP = null;
-
-  await new Promise(r => hitEventLoop(r, 20));
-}
-
-async function runTests() {
-
-  await SpecialPowers.pushPrefEnv({
-    set: [["dom.forms.always_allow_key_and_focus_events.enabled", true]],
-  });
+SimpleTest.waitForFocus(async () => {
   // test whether the IME state and composition are not changed unexpectedly
   runEditorFlagChangeTests();
 
@@ -256,18 +140,14 @@ async function runTests() {
   // XXX temporary disable against failure
   // runTestPasswordFieldOnDialog();
 
-  // Asynchronous tests
-  await runEditorReframeTests();
-
   // This will call onFinish(), so, this test must be the last.
+  // TODO: Make this test run with remote content too.
   runEditableSubframeTests();
-}
+});
 
 function onFinish() {
   SimpleTest.finish();
 }
-
 </script>
 </body>
-
 </html>
