--- a/testing/web-platform/tests/css/css-grid/subgrid/repeat-auto-fill-003.html
+++ b/testing/web-platform/tests/css/css-grid/subgrid/repeat-auto-fill-003.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
   <title>CSS Grid Test: repeat(auto-fill, line-names) in orthogonal parent subgrid</title>
@@ -11,13 +11,14 @@
   <link rel="match" href="repeat-auto-fill-001-ref.html">
   <style>
 html,body {
-  color:black; background-color:white; font:10px/1 monospace; padding:0; margin:0;
+  color:black; background-color:white; font:10px monospace; padding:0; margin:0; line-height:0;
 }
 
 .grid {
   display: inline-grid;
   grid-auto-columns: 15px;
   border: 1px solid;
+  vertical-align: top;
 }
 
 .subgrid {
