--- a/testing/web-platform/tests/html/semantics/selectors/pseudo-classes/enabled.html
+++ b/testing/web-platform/tests/html/semantics/selectors/pseudo-classes/enabled.html
@@ -30,13 +30,12 @@
 <form>
  <p><input type=submit contextmenu=formmenu id=submitbutton></p>
  <menu type=context id=formmenu>
-  
+  <!-- historical; these should *not* match -->
   <menuitem command="submitbutton" default id=menuitem1>
   <menuitem command="resetbutton" disabled id=menuitem2>
  </menu>
 </form>
 <fieldset id=fieldset1></fieldset>
-<fieldset disabled id=fieldset2></fieldset>
 
 <script>
   testSelectorIdsMatch(":enabled", ["button1", "input1", "select1", "optgroup1", "option1", "textarea1", "submitbutton", "fieldset1"], "':enabled' elements that are not disabled");
