--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -378,7 +378,7 @@
                     role="button"
                     data-l10n-id="urlbar-translations-button"
                     hidden="true"
-                    onclick="TranslationsParent.urlBarButtonClick(event);">
+                    onclick="TranslationsPanel.open(event);">
                 <image class="urlbar-icon"/>
               </hbox>
               <toolbarbutton id="urlbar-zoom-button"
