--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -456,7 +456,7 @@
       </toolbarbutton>
 
       <toolbarbutton id="unified-extensions-button"
-                     class="toolbarbutton-1"
+                     class="toolbarbutton-1 chromeclass-toolbar-additional"
                      delegatesanchor="true"
                      data-l10n-id="unified-extensions-button"
                      hidden="true"
