--- a/dom/webgpu/mochitest/test_submit_render_empty.html
+++ b/dom/webgpu/mochitest/test_submit_render_empty.html
@@ -36,7 +36,7 @@ const func = async function() {
     }],
   });
   pass.executeBundles([bundle]);
-  pass.endPass();
+  pass.end();
   const command_buffer = encoder.finish();
 
   device.queue.submit([command_buffer]);
