--- a/testing/web-platform/tests/html/semantics/popovers/popover-hidden-display.html
+++ b/testing/web-platform/tests/html/semantics/popovers/popover-hidden-display.html
@@ -24,10 +24,10 @@
   [popover].toplayer {
     background: red;
   }
-  [popover].toplayer:popover-open {
+  [popover].toplayer:open {
     background: green;
   }
-  [popover].nottoplayer:popover-open {
+  [popover].nottoplayer:open {
     background: red;
   }
 </style>
