Bug 1827856 - Remove nativeAnonymousChildList observers. r=smaug,credential-management-reviewers,devtools-reviewers,sgalich,nchevobbe
You let me know if this seems appealing to you :)

Differential Revision: https://phabricator.services.mozilla.com/D175382

UltraBlame original commit: 9c6e31cf285512d2d82a6f60a82884036a33f972

--- a/dom/base/test/test_mutationobservers.html
+++ b/dom/base/test/test_mutationobservers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=641821
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for Bug 641821</title>
@@ -840,10 +840,10 @@ function testAttributeRecordMerging4() {
 }
 
 function testChromeOnly() {
-  // Content can't access nativeAnonymousChildList
+  // Content can't access chromeOnlyNodes
   try {
     var mo = new M(function(records, observer) { });
-    mo.observe(div, { nativeAnonymousChildList: true });
+    mo.observe(div, { chromeOnlyNodes: true });
     ok(false, "Should have thrown when trying to observe with chrome-only init");
   } catch (e) {
     ok(true, "Throws when trying to observe with chrome-only init");
