--- a/testing/web-platform/tests/largest-contentful-paint/image-full-viewport.html
+++ b/testing/web-platform/tests/largest-contentful-paint/image-full-viewport.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <meta charset=utf-8>
 <title>Largest Contentful Paint: size when image overflows</title>
-
-
+<!-- In this test, an image with an intrinsic size of 100 x 50 is added, but
+  scaled up in order to overflow the viewport. It should not be reported. -->
 <body>
 <style>
 body {
@@ -15,6 +15,7 @@ body {
 <script>
   const viewportWidth = document.documentElement.clientWidth;
   const viewportHeight = document.documentElement.clientHeight;
+  setup({"hide_test_state": true});
   async_test(function (t) {
     assert_implements(window.LargestContentfulPaint, "LargestContentfulPaint is not implemented");
     const beforeLoad = performance.now();
