Bug 1829035 [wpt PR 39614] - css-lists: Improve inline-block-list*.html, a=testonly
Automatic update from web-platform-tests
css-lists: Improve inline-block-list*.html

'width: min-content' behavior with a marker is not interoperable in
browsers now. Use fit-content instead.

Bug: crbug.com/995106
Change-Id: I50cd4f34146bee82e3b99fdc1b13f084ca57f5fe
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4452066
Commit-Queue: Koji Ishii <kojiichromium.org>
Auto-Submit: Kent Tamura <tkentchromium.org>
Reviewed-by: Koji Ishii <kojiichromium.org>
Cr-Commit-Position: refs/heads/main{#1132937}

--

wpt-commits: 13106aa29f0872504a6cf3a5f015710fe9d65f7c
wpt-pr: 39614

UltraBlame original commit: 84636bdb4f2f81da605420147a16ac137b8f22eb

--- a/testing/web-platform/tests/css/css-lists/inline-block-list-ref.html
+++ b/testing/web-platform/tests/css/css-lists/inline-block-list-ref.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <head>
   <meta charset="utf-8">
   <title>CSS Reference: inline flow-root list-item</title>
@@ -17,7 +17,7 @@ body { margin-left: 40px; }
 li { border: 1px solid; display: list-item; }
 
 .wrap { width: 22ch; }
-.m { width: -webkit-min-content; width: min-content; }
+.m { width: fit-content; }
 ib { display:inline-block; }
 </style>
 </head>
