--- a/testing/web-platform/tests/css/css-lists/inline-block-list-marker-ref.html
+++ b/testing/web-platform/tests/css/css-lists/inline-block-list-marker-ref.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <head>
   <meta charset="utf-8">
   <title>CSS Reference: inline flow-root list-item with ::marker</title>
@@ -18,7 +18,7 @@ li { border: 1px solid; display: list-item; }
 li::marker { content: counters(list-item, ".") " "; }
 
 .wrap { width: 22ch; }
-.m { width: -webkit-min-content; width: min-content; }
+.m { width: fit-content; }
 ib { display:inline-block; }
 </style>
 </head>
