Bug 1933156 part 2: Fire a name change event when a XUL button's label attribute changes. r=nlapre
Differential Revision: https://phabricator.services.mozilla.com/D230216

UltraBlame original commit: 51fd32a534ae52803924d9d3baf90d2ff00cf89e

--- a/accessible/tests/mochitest/events/test_namechange.xhtml
+++ b/accessible/tests/mochitest/events/test_namechange.xhtml
@@ -10,6 +10,7 @@
   <script src="chrome://mochikit/content/chrome-harness.js"/>
 
   <script src="../common.js" />
+  <script src="../name.js" />
   <script src="../promisified-events.js" />
 
   <script type="application/javascript">
@@ -23,6 +24,15 @@
       info("Changing childContent value");
       getNode("childcontent").setAttribute("value", "Changed.");
       await changed;
+
+      const buttonWithLabel = getNode("buttonWithLabel");
+      testName(buttonWithLabel, "initial");
+      info("Changing buttonWithLabel label");
+      changed = waitForEvent(EVENT_NAME_CHANGE, buttonWithLabel);
+      buttonWithLabel.setAttribute("label", "changed");
+      await changed;
+      testName(buttonWithLabel, "changed");
+
       SimpleTest.finish();
     }
 
@@ -45,5 +55,7 @@
         <description id="childcontent" value="This will be changed."/>
       </richlistitem>
     </richlistbox>
+
+    <button id="buttonWithLabel" label="initial"/>
   </vbox>
 </window>
