Bug 1933288 part 7: Add a second pass to 'stretch' WPTs to test with "box-sizing:border-box", to validate that it doesn't impact the sizing. r=TYLin
box-sizing:border-box shouldn't impact the sizing because we're growing to fill
the containing block, which means we end up with the same overall size in the
relevant axis regardless of whether we're stretching the border-box or the
content-box.

(There's one special case in these tests where it does actually matter, but
not in a way that's really based on how 'stretch' itself is resolved; so I
simply opt that subtest out of this second pass.)

Differential Revision: https://phabricator.services.mozilla.com/D230297

UltraBlame original commit: 7892bfc41933d4fe8b8ca6596f4cb4e50161e4e1

--- a/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-min-inline-size-001.tentative.html
+++ b/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-min-inline-size-001.tentative.html
@@ -4,6 +4,12 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<!-- NOTE: This test is meant to be an near-exact copy of the neighboring test
+     file of nearly-the-same-name, with this version just adding "-alias" and
+     ".tentative" to the filename. The markup should be identical to the
+     original, aside from s/stretch/-webkit-fill-available/ in the CSS rule
+     ".test {...}".  The expectation is that those keywords can be considered
+     to be aliases that give the exact same sizing behavior. -->
 <meta name="assert"
   content="min-inline-size:stretch (setting 'min-width' in this case) resolves and clamps as expected (producing similar results as if we had specified the keyword for the inline-size property)">
 <style>
@@ -44,7 +50,7 @@
 
     /* We expect "min-inline-size:stretch" to cause the used value of
      * "inline-size" to be clamped to the resolved "stretch" size. */
-    min-inline-size: stretch;
+    min-inline-size: -webkit-fill-available;
     inline-size: 0;
     block-size: 20px;
     background: fuchsia;
