--- a/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-inline-size-001.tentative.html
+++ b/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-inline-size-001.tentative.html
@@ -4,8 +4,14 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<!-- NOTE: This test is meant to be an near-exact copy of the neighboring test
+     file of nearly-the-same-name, with this version just adding "-alias" and
+     ".tentative" to the filename. The markup should be identical to the
+     original, aside from s/stretch/-webkit-fill-available/ in the CSS rule
+     ".test {...}".  The expectation is that those keywords can be considered
+     to be aliases that give the exact same sizing behavior. -->
 <meta name="assert"
-  content="min-inline-size:stretch (setting 'min-width' in this case) resolves and clamps as expected (producing similar results as if we had specified the keyword for the inline-size property)">
+  content="inline-size:stretch (setting 'width' in this case) causes an element's content-box to be sized such that its margin-box-size will fill the containing block's content-box.">
 <style>
   .cb {
     inline-size: 50px;
@@ -42,10 +48,7 @@
     border: 3px solid blue;
     padding: 2px;
 
-    /* We expect "min-inline-size:stretch" to cause the used value of
-     * "inline-size" to be clamped to the resolved "stretch" size. */
-    min-inline-size: stretch;
-    inline-size: 0;
+    inline-size: -webkit-fill-available;
     block-size: 20px;
     background: fuchsia;
   }
