--- a/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-max-inline-size-001.tentative.html
+++ b/testing/web-platform/tests/css/css-sizing/stretch/stretch-alias-max-inline-size-001.tentative.html
@@ -4,8 +4,14 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/resources/check-layout-th.js"></script>
+<!-- NOTE: This test is meant to be an near-exact copy of the neighboring test
+     file of nearly-the-same-name, with this version just adding "-alias" and
+     ".tentative" to the filename. The markup should be identical to the
+     original, aside from s/stretch/-webkit-fill-available/ in the CSS rule
+     ".test {...}".  The expectation is that those keywords can be considered
+     to be aliases that give the exact same sizing behavior. -->
 <meta name="assert"
-  content="min-inline-size:stretch (setting 'min-width' in this case) resolves and clamps as expected (producing similar results as if we had specified the keyword for the inline-size property)">
+  content="max-inline-size:stretch (setting 'max-width' in this case) resolves and clamps as expected (producing similar results as if we had specified the keyword for the inline-size property)">
 <style>
   .cb {
     inline-size: 50px;
@@ -42,10 +48,13 @@
     border: 3px solid blue;
     padding: 2px;
 
-    /* We expect "min-inline-size:stretch" to cause the used value of
+    /* We expect "max-inline-size:stretch" to cause the used value of
      * "inline-size" to be clamped to the resolved "stretch" size. */
-    min-inline-size: stretch;
-    inline-size: 0;
+    max-inline-size: -webkit-fill-available;
+    /* This is intentionally larger than our containing block's inline-size,
+     * and we expect it to be clamped by our max-inline-size specified above
+     * in nearly all of this test's subtests. */
+    inline-size: 55px;
     block-size: 20px;
     background: fuchsia;
   }
@@ -55,11 +64,14 @@
     checkLayout('[data-expected-width]');
 
     // Add box-sizing:border-box (which shouldn't impact the actual resolved
-    // box sizes that 'stretch' produces), and retest:
+    // box sizes that 'stretch' produces, aside from one subtest that we skip
+    // for this pass), and retest:
     for (let elem of document.querySelectorAll(".test")) {
-      elem.style.boxSizing = "border-box";
+      if (!elem.hasAttribute("skip-second-pass")) {
+        elem.style.boxSizing = "border-box";
+      }
     }
-    checkLayout('[data-expected-width]');
+    checkLayout('[data-expected-width]:not([skip-second-pass])');
   }
 </script>
 <body onload="runTests()">
@@ -202,8 +214,21 @@
     <div class="test" data-expected-width="30"></div>
   </div>
 
-  <!-- 'stretch' on a grid item in an automatically-sized grid track: -->
+  <!-- 'stretch' on a grid item in an automatically-sized grid track:
+       Here, the 'max-inline-size:stretch' doesn't get to make a difference,
+       because it doesn't resolve (and hence doesn't have any clamping effect)
+       during the column's intrinsic-sizing pass. So the grid column ends up
+       being sized to exactly fit the *unclamped* 'inline-size'; and that
+       column then establishes the containing block that we resolve the
+       "max-inline-size:stretch" keyword against. This ultimately means that
+       the max-inline-size happens to resolve to our unclamped inline-size,
+       and hence it trivially has no clamping impact. (This also means that
+       'box-sizing' *does affect the expected size* in this subtest, unlike the
+       rest of this test's subtests! So, we use a dummy attribute to opt this
+       subtest out of this test's second pass, to avoid incorrectly asserting
+       that our data-expected-width is still the target size when 'box-sizing'
+       is tweaked.)  -->
   <div class="cb" style="display: inline-grid">
-    <div class="test" data-expected-width="45"></div>
+    <div class="test" data-expected-width="65" skip-second-pass></div>
   </div>
 </body>
