--- a/testing/web-platform/tests/css/css-sizing/stretch/stretch-inline-size-001.html
+++ b/testing/web-platform/tests/css/css-sizing/stretch/stretch-inline-size-001.html
@@ -50,6 +50,13 @@
 <script>
   function runTests() {
     checkLayout('[data-expected-width]');
+
+    // Add box-sizing:border-box (which shouldn't impact the actual resolved
+    // box sizes that 'stretch' produces), and retest:
+    for (let elem of document.querySelectorAll(".test")) {
+      elem.style.boxSizing = "border-box";
+    }
+    checkLayout('[data-expected-width]');
   }
 </script>
 <body onload="runTests()">
