--- a/testing/web-platform/tests/css/css-sizing/stretch/stretch-max-inline-size-001.html
+++ b/testing/web-platform/tests/css/css-sizing/stretch/stretch-max-inline-size-001.html
@@ -56,6 +56,16 @@
 <script>
   function runTests() {
     checkLayout('[data-expected-width]');
+
+    // Add box-sizing:border-box (which shouldn't impact the actual resolved
+    // box sizes that 'stretch' produces, aside from one subtest that we skip
+    // for this pass), and retest:
+    for (let elem of document.querySelectorAll(".test")) {
+      if (!elem.hasAttribute("skip-second-pass")) {
+        elem.style.boxSizing = "border-box";
+      }
+    }
+    checkLayout('[data-expected-width]:not([skip-second-pass])');
   }
 </script>
 <body onload="runTests()">
@@ -204,10 +214,15 @@
        during the column's intrinsic-sizing pass. So the grid column ends up
        being sized to exactly fit the *unclamped* 'inline-size'; and that
        column then establishes the containing block that we resolve the
-       "max-inline-size:stretch" keyword against.  This ultimately means that
+       "max-inline-size:stretch" keyword against. This ultimately means that
        the max-inline-size happens to resolve to our unclamped inline-size,
-       and hence it trivially has no clamping impact. -->
+       and hence it trivially has no clamping impact. (This also means that
+       'box-sizing' *does affect the expected size* in this subtest, unlike the
+       rest of this test's subtests! So, we use a dummy attribute to opt this
+       subtest out of this test's second pass, to avoid incorrectly asserting
+       that our data-expected-width is still the target size when 'box-sizing'
+       is tweaked.)  -->
   <div class="cb" style="display: inline-grid">
-    <div class="test" data-expected-width="65"></div>
+    <div class="test" data-expected-width="65" skip-second-pass></div>
   </div>
 </body>
