--- a/toolkit/content/tests/chrome/window_maximized_persist_with_no_titlebar.xhtml
+++ b/toolkit/content/tests/chrome/window_maximized_persist_with_no_titlebar.xhtml
@@ -5,7 +5,7 @@
         height="300"
         width="300"
         sizemode="normal"
-        chromemargin="0,0,0,0"
+        customtitlebar="true"
         id="window"
         persist="height width sizemode">
 <script type="application/javascript"><![CDATA[
