--- a/browser/base/content/pageinfo/pageInfo.xhtml
+++ b/browser/base/content/pageinfo/pageInfo.xhtml
@@ -12,7 +12,7 @@
   windowtype="Browser:page-info"
 #ifdef XP_MACOSX
   drawtitle="true"
-  customtitlebar="true"
+  chromemargin="0,0,0,0"
 #endif
   onload="onLoadPageInfo()"
   align="stretch"
