--- a/browser/base/content/webrtcIndicator.xhtml
+++ b/browser/base/content/webrtcIndicator.xhtml
@@ -10,7 +10,7 @@
   xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
   id="webrtcIndicator"
   windowtype="Browser:WebRTCGlobalIndicator"
-  customtitlebar="true"
+  chromemargin="0,0,0,0"
 >
   <head>
     <link rel="stylesheet" href="chrome://global/skin/global.css" />
