Bug 1933801 [wpt PR 49407] - Add tests for `::slotted(*)::file-selector-button`, a=testonly
Automatic update from web-platform-tests
Add tests for `::slotted(*)::file-selector-button` (#49407)

--

wpt-commits: 2d5d222739fdf91743f8cbc58094976a613194e7
wpt-pr: 49407

UltraBlame original commit: 732bcd7ac9715c84a87e102cdac239ab5c215994

--- a/testing/web-platform/tests/css/css-scoping/slotted-parsing.html
+++ b/testing/web-platform/tests/css/css-scoping/slotted-parsing.html
@@ -40,6 +40,7 @@
   test_valid_selector("::slotted(*)::before");
   test_valid_selector("::slotted(*)::after");
   test_valid_selector("::slotted(*)::details-content");
+  test_valid_selector("::slotted(*)::file-selector-button");
   test_valid_selector("::slotted(*)::placeholder");
   test_valid_selector("::slotted(*)::marker");
 
