Bug 1855136 - Bundle the frozen library r=sylvestre
From https://github.com/serge-sans-paille/frozen

Differential Revision: https://phabricator.services.mozilla.com/D189198

UltraBlame original commit: cb3d8d8322b05f51186a8bf713b4293290fa33a4

--- a/toolkit/content/license.html
+++ b/toolkit/content/license.html
@@ -1521,6 +1521,7 @@ product.
                 <li><code>devtools/client/netmonitor/src/components/messages/parsers/signalr/TextMessageFormat.js</code></li>
                 <li><code>devtools/client/netmonitor/src/components/messages/parsers/signalr/Utils.js</code></li>
                 <li><code>third_party/cups/include</code></li>
+                <li><code>third_party/frozen</code></li>
 #ifdef MOZ_JXL
                 <li><code>third_party/highway/</code></li>
 #endif
