Bug 1935099. Fix image/test/mochitest/test_animSVGImage.html. r=dshin
Differential Revision: https://phabricator.services.mozilla.com/D231074

UltraBlame original commit: c69235511dfb18550ba46fbc1989a44b6fc7c6f3

--- a/image/test/mochitest/test_animSVGImage.html
+++ b/image/test/mochitest/test_animSVGImage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=610419
+-->
 <head>
   <title>Test for Bug 610419</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -74,7 +74,7 @@ function myPoll() {
     ok(true, "Animated image looks correct, " +
              "at call #" + gPollCounter + " to myPoll");
 
-    if (++gSVGCurrentImage > gSVGImages.length) {
+    if (++gSVGCurrentImage >= gSVGImages.length) {
       cleanUpAndFinish();
     } else {
       loadNextImageAndPoll();
